<resources>
    <string name="app_name">ssm</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">Historial</string>
    <string name="action_scan">Escaner</string>
    <string name="title_menu">Menu Principal</string>
    <string name="title_login">Ingresar al Sistema</string>
    <string name="title_lst_beneficiarios">Lista Destinatarios</string>
    <string name="title_visita">Visita</string>
    <string name="title_formulario">Formulario</string>
    <string name="title_Reporte">Reporte</string>
    <string name="title_Reporte_marcacion">Reporte Marcacion</string>
    <string name="title_Eventos">Eventos</string>
    <string name="title_Historial">Historial de Eventos</string>
    <string name="title_formularios">Formularios</string>
    <string name="title_galeria">Galeria Interna</string>
    <string name="title_subformulario">SUBFORMULARIO</string>
    <string name="title_capturar_coordenadas">Capturar Coordenadas</string>
    <string name="lbl_aceptar">ACEPTAR</string>
    <string name="lbl_cancelar">CANCELAR</string>
    <string name="lbl_activar">ACTIVAR</string>
    <string name="lbl_usuario">USUARIO</string>
    <string name="lbl_password">CONTRASEÑA</string>
    <string name="lbl_institucion">Institucion</string>
    <string name="lbl_ingresar">INGRESAR</string>
    <string name="lbl_ver_pass">Ver Contraseña</string>
    <string name="lbl_ingreso_progress">Verificando...</string>
    <string name="lbl_ingreso_correcto">Correcto</string>
    <string name="lbl_err_sin_usuario">Debe agregar un usuario</string>
    <string name="lbl_err_sin_password">Debe agregar el password</string>
    <string name="lbl_choose_institucion">Eliga una Institucion</string>
    <string name="lbl_inicio_recorrido">Inciar Recorrido</string>
    <string name="lbl_fin_recorrido">Finalizar Recorrido</string>
    <string name="lbl_descarga">DESCARGA</string>
    <string name="lbl_msj_descargando">Descargando Datos Asignados ...</string>
    <string name="lbl_alert_geoposicion">La presicion es mayor a 30 metros, Porfavor busque una mejor ubicacion.</string>
    <string name="lbl_crn_recorrido">Tiempo del Recorrido :</string>
    <string name="lbl_distancia">Distancia :</string>
    <string name="lbl_crn_visita">Tiempo de la Visita :</string>
    <string name="lbl_cont_capturas">Capturas :</string>
    <string name="lbl_cont_adjuntos">Adjuntos :</string>
    <string name="lbl_tipo_benef">Tipo de Destinatario</string>
    <string name="lbl_entidad_relevar">Entidad a Relevar</string>
    <string name="lbl_nombre">Nombres</string>
    <string name="lbl_apellidos">Apellidos</string>
    <string name="lbl_motivo">Motivos</string>
    <string name="lbl_observacion">Observacion/Informe</string>
    <string name="lbl_cedula">Cedula</string>
    <string name="lbl_entidad">Entidad</string>
    <string name="lbl_ruc">R.U.C</string>
    <string name="lbl_id">Identificador</string>
    <string name="lbl_denominacion">Denominacion</string>
    <string name="lbl_continuar">Continuar Formulario</string>
    <string name="lbl_finalizar">Finalizar</string>
    <string name="lbl_end_form">Fin del Formulario</string>
    <string name="lbl_seccion">Seccion :</string>
    <string name="lbl_seccion1">SECCION</string>
    <string name="lbl_requerido">REQUERIDO</string>
    <string name="lbl_no_requerido">NO REQUERIDO</string>
    <string name="lbl_titulo">TITULO</string>
    <string name="lbl_total_relevado">Total Relevado :</string>
    <string name="lbl_total_enviado">Total Enviado :</string>
    <string name="lbl_total_capturas">Total Capturas :</string>
    <string name="lbl_total_adjuntos">Total Adjuntos :</string>
    <string name="lbl_total_valid">Capturas Verificadas en Servidor :</string>
    <string name="lbl_metros"> metros</string>
    <string name="lbl_segundoplano">Minimizar</string>
    <string name="lbl_title_reporte">Describa el evento</string>
    <string name="lbl_reportar">REPORTAR</string>
    <string name="lbl_verCapturas">Ver Capturas</string>
    <string name="lbl_dpto">Departamentos</string>
    <string name="lbl_distritos">Distritos</string>
    <string name="lbl_distrito">Distrito</string>
    <string name="lbl_localidad">Localidad</string>
    <string name="lbl_fechahora">Fecha y Hora </string>
    <string name="lbl_informe">Informe :</string>
    <string name="lbl_documento">Documento Identidad</string>
    <string name="lbl_sin_documento">Sin Documento</string>
    <string name="lbl_1er_nombre">Primer Nombre</string>
    <string name="lbl_2er_nombre">Segundo Nombre</string>
    <string name="lbl_1er_apellido">Primer Apellido</string>
    <string name="lbl_2er_apellido">Segundo Apellido</string>
    <string name="lbl_ajustar">AJUSTAR</string>
    <string name="lbl_salir">SALIR</string>
    <string name="lbl_destinatario">Destinatario</string>
    <string name="lbl_hora">Destinatario</string>
    <string name="lbl_doc">Documento</string>
    <string name="lbl_estado">Estado</string>
    <string name="lbl_comunidad">Comunidad</string>
    <string name="lbl_identificador">Identificador</string>
    <string name="lbl_coordenadas">Coordenadas</string>
    <string name="lbl_archivos">ARCHIVOS</string>
    <string name="lbl_img_galeria">IMAGENES</string>
    <string name="lbl_modulo">MODULO</string>
    <string name="lbl_Nom_dist">Nombre Distrito</string>
    <string name="lbl_total_reportado">Reportes Enviados : </string>
    <string name="lbl_capturas">Capturas Enviadas : </string>
    <string name="lbl_reporte">Reporte</string>
    <string name="lbl_hecho">HECHO</string>
    <string name="lbl_cerrar_session">Cerrar Sesion</string>
    <string name="lbl_leer_codigo">Leer Codigo</string>
    <string name="lbl_altitud">Altitud :</string>
    <string name="lbl_proveedor">Proveedor :</string>
    <string name="lbl_tipo_marcacion">Tipo Marcacion</string>
    <string name="lbl_btn_visita">Visita</string>
    <string name="lbl_btn_reporte">Reporte Visita</string>
    <string name="lbl_btn_formulario">Rellenar Formulario</string>
    <string name="lbl_btn_evento">Informar Evento</string>
    <string name="lbl_btn_ant">ANTERIOR</string>
    <string name="lbl_btn_sgt">SIGUIENTE</string>
    <string name="lbl_btn_marcacion">MARCACION ENTRADA-SALIDA</string>
    <string name="lbl_btn_rep_marcacion">REPORTE MARCACIONES</string>
    <string name="lbl_btn_agregar_per">AGREGAR RESPUESTA</string>
    <string name="lbl_btn_buscar_miembro">Buscar Familiar</string>
    <string name="lbl_btn_verificar_ci">Verificar C.I.</string>
    <string name="lbl_btn_notificacion">Notificaciones</string>
    <string name="lbl_btn_sin_familiares">Hogar de un solo miembro</string>
    <string name="lbl_btn_informe_formulario">Ver Formulario</string>
    <string name="lbl_btn_ver_imagenes">Ver Capturas</string>
    <string name="lbl_btn_emprezar">EMPEZAR</string>
    <string name="lbl_btn_continuar">Continuar</string>
    <string name="lbl_btn_guardar_finalizar">Guardar y Finalizar</string>
    <string name="lbl_btn_corregir">Corregir</string>
    <string name="lbl_btn_galeria">Galeria Interna</string>
    <string name="lbl_btn_gps">Obtener Coordenadas</string>
    <string name="lbl_btn_add_gps">Agregar Coordenada</string>
    <string name="lbl_btn_marcacion_ent">MARCACION ENTRADA</string>
    <string name="lbl_btn_marcacion_sal">MARCACION SALIDA</string>
    <string name="lbl_ch_jefe_familia">Es jefe de Familia</string>
    <string name="lbl_rep_beneficiario">Beneficiario :</string>
    <string name="lbl_rep_destinatario">Destinatario :</string>
    <string name="lbl_rep_destinatario_verif">Destinatario Verificado :</string>
    <string name="lbl_rep_documento">Documento :</string>
    <string name="lbl_rep_fecha">Fecha Visita </string>
    <string name="lbl_rep_motivo">Motivo </string>
    <string name="lbl_rep_long">Longitud :"</string>
    <string name="lbl_rep_lat">Latitud :"</string>
    <string name="lbl_rep_pres">Precisión :</string>
    <string name="lbl_rep_est">Estado :</string>
    <string name="lbl_rep_env">Envio </string>
    <string name="lbl_rep_doc">DOCUMENTO :"</string>
    <string name="lbl_rep_lat_null">Latitud :Sin señal</string>
    <string name="lbl_rep_long_null">Longitud :Sin señal</string>
    <string name="lbl_rep_pres_null">Precisión :Sin señal</string>
    <string name="lbl_sp_img_device">Imagenes en Dipositivo</string>
    <string name="lbl_sp_img_db">Imagenes en Base Interna</string>
    <string name="files_adj">Archivos Adjuntos</string>
    <string name="dialog_title_err_session">Session Expirada</string>
    <string name="dialog_title_err_geo">Alerta Geolocalizacion</string>
    <string name="dialog_msj_err_geo">Debe tener los servicio de Ubicacion por GPS y redes Activado</string>
    <string name="dialog_title_err_network">Alerta Conexion</string>
    <string name="dialog_msj_err_network">No hay conexion a internet.Favor Verifique</string>
    <string name="dialog_title_err_mock_location">Alerta Ubicacion Falsa</string>
    <string name="dialog_msj_err_mock_location">Ubicacion Falsa detectada. Favor desactivela\n Si ademas tiene una app de ubicacion falsa debe desinstalarla</string>
    <string name="dialog_msj_provider_disable">Ha desactivado su Servicio de Ubicacion por :</string>
    <string name="dialog_title_alert_confir">CONFIRMAR</string>
    <string name="dialog_msj_alert_confir_out">Desea salir sin guardar</string>
    <string name="dialog_title_alert_capt">Alerta Capturas</string>
    <string name="dialog_msj_alert_capt">Debe agregar al menos una capturas del Destinatario</string>
    <string name="dialog_msj_alert_capt_ev">Debe agregar al menos una evidencia de la Actividad</string>
    <string name="dialog_title_delete">Confirmar Eliminar</string>
    <string name="dialog_msj_delete">Desea eliminar los registros Enviados</string>
    <string name="dialog_title_sinfinalizar">Sin Finalizar</string>
    <string name="dialog_msj_sinfinalizar">Desea Continuar el Formulario</string>
    <string name="dialog_title_session">Session</string>
    <string name="dialog_msj_session_close">Cerrando Session</string>
    <string name="dialog_msj_err_cerrar_session">Error al Cerrar la Session. Desea salir de todas Formas?</string>
    <string name="dialog_title_copy">Copiando</string>
    <string name="dialog_msj_copy">Copiando Base Espere</string>
    <string name="dialog_title_finalizar">Finalizar</string>
    <string name="dialog_msj_finalizar">Desea Finalizar Recorrido</string>
    <string name="dialog_title_pendientes">PENDIENTES</string>
    <string name="dialog_msj_progress">Desea Ver el progreso de envio</string>
    <string name="dialog_msj_progress_run">Enviando...</string>
    <string name="dialog_msj_pendientes">Tiene Pendientes de envio</string>
    <string name="dialog_btn_reporte">Ir a Reporte</string>
    <string name="dialog_btn_enviartarde">Enviar mas tarde</string>
    <string name="dialog_title_proy">PROYECTOS</string>
    <string name="dialog_title_img">IMAGENES</string>
    <string name="dialog_title_permisos">PERMISOS</string>
    <string name="dialog_msj_permisos">La aplicacion no puede operar sin los permisos correspondientes. favor verifique</string>
    <string name="dialog_title_marcacion">MARCACION</string>
    <string name="dialog_msj_marcacion">Esperando Localizacion</string>
    <string name="dialog_msj_marcacion_err">No puede realizar otra marcacion el dia de hoy</string>
    <string name="dialog_msj_marcacion_confir">Desea realizar la marcacion de Salida</string>
    <string name="dialog_title_validando">VALIDACION</string>
    <string name="dialog_msg_validando">Comprobando con Identificaciones. Espere</string>
    <string name="dialog_title_error_descargar">Error</string>
    <string name="mn_lbl_exportar">EXPORTAR</string>
    <string name="mn_lbl_importar">IMPORTAR</string>
    <string name="mn_lbl_descargar">DESCARGAR</string>
</resources>