<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_opciones"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_overflow"
        app:showAsAction="ifRoom">

        <menu>
            <item android:id="@+id/mn_descargar"
                android:title="@string/mn_lbl_descargar" />
            <item android:id="@+id/mn_exportar"
                android:title="@string/mn_lbl_exportar" />
            <item android:id="@+id/mn_importar"
                android:title="@string/mn_lbl_importar" />
            <item android:id="@+id/mn_cerrar_session"
                android:title="@string/lbl_cerrar_session" />
        </menu>
    </item>
    <!--
    <item
        android:id="@+id/act_help"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_help_white_48dp"/>-->
</menu>