<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/edtUsuario"
                android:hint="@string/lbl_usuario"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/lbl_password"
                android:ems="10"
                android:id="@+id/edtPassword"
                android:layout_marginBottom="10dp"/>

        </android.support.design.widget.TextInputLayout>


        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_ver_pass"
            android:id="@+id/chVerPass"
            android:checked="false"
            android:layout_marginBottom="5dp"/>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/lbl_ingresar"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:pb_colorComplete="@color/green_complete"
            app:pb_colorNormal="@color/blue_normal"
            app:pb_colorPressed="@color/blue_pressed"
            app:pb_colorProgress="@color/purple_progress"
            app:pb_textComplete="@string/lbl_ingreso_correcto"
            app:pb_textProgress="@string/lbl_ingreso_progress" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </LinearLayout>
</LinearLayout>