<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_timer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/naranja1"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/negro1"
            android:text="@string/lbl_crn_recorrido"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/negro1"
            android:id="@+id/lbl_time"
            android:text="00:00:00"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/naranja1"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/negro1"
            android:text="@string/lbl_distancia"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/negro1"
            android:id="@+id/lbl_distancia"
            android:text="0"
            android:textSize="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_btn_visita"
                    android:id="@+id/btnVisita"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:padding="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_btn_reporte"
                    android:id="@+id/btnReporte"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_btn_galeria"
                    android:id="@+id/btnGaleria"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_btn_evento"
                    android:id="@+id/btnEvento"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_btn_notificacion"
                    android:id="@+id/btnNotificaciones"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnRecorrido"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_btn_marcacion"
                    android:id="@+id/btnMarcacion"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Reporte de Marcaciones"
                    android:id="@+id/btnReporteMarcacion"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="20dp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>